--- a/Rewrite/Rewrite.conf
+++ b/Rewrite/Rewrite.conf
@@ -1,4 +1,10 @@
-hostname = mp.weixin.qq.com, *.weibo.cn, *.fun, *.club, m.youdao.com, *.bilibili.com, *.nfmovies.com, www.dililitv.com, js.dilidd.com, jable.tv, asewlfjqwlflkew.com, m.yhdm.io, smallseotools.com, *.iiilab.com, api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, *.wtzw.com, *.pornhub.com, dmhy.anoneko.com, *.bebi.com, pan.baidu.com, heic.alicdn.com, god.gameyw.netease.com, www.google.com, image.pushplus.plus, slb.orderorigin.com, app.dewu.com
+hostname = mp.weixin.qq.com, *.weibo.cn, *.fun, *.club, m.youdao.com, *.bilibili.com, *.nfmovies.com, www.dililitv.com, js.dilidd.com, jable.tv, asewlfjqwlflkew.com, m.yhdm.io, smallseotools.com, *.iiilab.com, api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, *.wtzw.com, *.pornhub.com, dmhy.anoneko.com, *.bebi.com, pan.baidu.com, heic.alicdn.com, god.gameyw.netease.com, www.google.com, image.pushplus.plus, slb.orderorigin.com, app.dewu.com, *.fenbi.com
+
+# > 粉笔公考
+//---删除粉笔公考Banner广告
+^https://(tiku|keapi)\.fenbi\.com/(app/)?iphone/.*/(small_)?banners? url reject-dict
+//---删除粉笔公考课程
+#^https://ke\.fenbi\.com/iphone/.*/v3/content url reject-200
 
 # > 得物
 //---去除得物app用户信息页广告
