--- a/Rewrite/Rewrite.conf
+++ b/Rewrite/Rewrite.conf
@@ -1,4 +1,4 @@
-hostname = mp.weixin.qq.com, *.weibo.cn, *.fun, *.club, m.youdao.com, *.bilibili.com, *.nfmovies.com, www.dililitv.com, js.dilidd.com, jable.tv, asewlfjqwlflkew.com, m.yhdm.io, smallseotools.com, *.iiilab.com, api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, *.wtzw.com, *.pornhub.com, dmhy.anoneko.com, *.bebi.com, pan.baidu.com, heic.alicdn.com, god.gameyw.netease.com, www.google.com, image.pushplus.plus, slb.orderorigin.com, app.dewu.com, *.fenbi.com
+hostname = mp.weixin.qq.com, *.weibo.cn, m.youdao.com, *.bilibili.com, *.nfmovies.com, www.dililitv.com, js.dilidd.com, jable.tv, asewlfjqwlflkew.com, m.yhdm.io, smallseotools.com, *.iiilab.com, api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, *.wtzw.com, *.pornhub.com, dmhy.anoneko.com, *.bebi.com, pan.baidu.com, heic.alicdn.com, god.gameyw.netease.com, image.pushplus.plus, slb.orderorigin.com, app.dewu.com, *.fenbi.com
 
 # > 粉笔公考
 //---删除粉笔公考Banner广告
@@ -17,10 +17,6 @@ hostname = mp.weixin.qq.com, *.weibo.cn, *.fun, *.club, m.youdao.com, *.bilibili
 
 # > pushplus通知详情页去广告
 http://image.pushplus.plus/.*.jpg url 302 https://raw.githubusercontent.com/githubacct001/QuantumultX/master/Rewrite/Adfuckoff.png
-
-# > Google Search
-//---顶部广告
-#^https:\/\/www\.google\.com\/(complete\/)?search.* url response-body (<div class="uEierd">.*(</div>){7}){1,4} response-body <none>
 
 # > 网易大神
 //---开屏广告
@@ -75,10 +71,6 @@ http://m.yhdm.io/bar/yfyh.js url reject
 
 # > nfmovies www.nfmovies.com
 https:?/\/www.nfmovies.com\b.* url response-body <div class="myui-ra-container container">(\n.*){11}|76px|60px|chanceAd = 1;|timerAdCountdownCount > 5 response-body 000px
-
-# > cocomanhua www.cocomanhua.com
-^https:\/\/.*\.fun\/floater.* url reject
-^https:\/\/.*\.club\/floater.* url reject
 
 # > 微信
 ^https:\/\/mp\.weixin\.qq\.com\/mp\/ad.* url reject
