--- a/Rewrite/Rewrite.conf
+++ b/Rewrite/Rewrite.conf
@@ -1,81 +1,96 @@
-hostname = mp.weixin.qq.com, *.weibo.cn, m.youdao.com, *.bilibili.com, *.nfmovies.com, www.dililitv.com, js.dilidd.com, jable.tv, asewlfjqwlflkew.com, m.yhdm.io, smallseotools.com, *.iiilab.com, api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, *.wtzw.com, *.pornhub.com, dmhy.anoneko.com, *.bebi.com, pan.baidu.com, heic.alicdn.com, god.gameyw.netease.com, image.pushplus.plus, slb.orderorigin.com, app.dewu.com, *.fenbi.com
+hostname = mp.weixin.qq.com, *.weibo.cn, m.youdao.com, *.bilibili.com, *.nfmovies.com, www.dililitv.com, js.dilidd.com, jable.tv, asewlfjqwlflkew.com, m.yhdm.io, smallseotools.com, *.iiilab.com, api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, *.wtzw.com, *.pornhub.com, dmhy.anoneko.com, *.bebi.com, pan.baidu.com, heic.alicdn.com, god.gameyw.netease.com, image.pushplus.plus, slb.orderorigin.com, app.dewu.com, *.fenbi.com, az1mbasecc.bas.cmbchina.com, s3gw.cmbimg.com, portal.zjzwfw.gov.cn
 
-# > 粉笔公考
-//---删除粉笔公考Banner广告
+
+
+### > 浙里办
+# 去开屏广告
+^https?:\/\/portal\.zjzwfw\.gov\.cn\/app_api\/appHome\/selectStartPic url reject
+
+### > 招商银行
+# 去开屏广告
+^https?:\/\/s3gw\.cmbimg\.com\/mbappinitads url reject
+
+### > 掌上生活
+# 去开屏广告
+^https?:\/\/az1mbasecc\.bas\.cmbchina\.com\/Edge\/api\/mlife\.clientface\.clientservice\.api\.advertiseService\/preCacheAdvertiseSec url reject
+
+### > 粉笔公考
+# 删除粉笔公考Banner广告
 ^https://(tiku|keapi)\.fenbi\.com/(app/)?iphone/.*/(small_)?banners? url reject-dict
-//---删除粉笔公考课程
+# 删除粉笔公考课程
 #^https://ke\.fenbi\.com/iphone/.*/v3/content url reject-200
 
 # > 得物
-//---去除得物app用户信息页广告
+# 去用户信息页广告
 ^https://app\.dewu\.com/api/v1/app/index/ice/user-info url script-response-body https://raw.githubusercontent.com/githubacct001/QuantumultX/secret/Rewrite/dewu/dw_user.js
-//---去除得物app探索页面广告
+# 去探索页面广告
 ^https://app\.dewu\.com/identify-discovery/v1/discovery/index url script-response-body https://raw.githubusercontent.com/githubacct001/QuantumultX/secret/Rewrite/dewu/dw_discovery.js
 
-# > 小星空解锁热门对象回复
+### > 小星空解锁热门对象回复
 ^https://slb\.orderorigin\.com\/stars-p\/v2\/explore\/msg\/msg-busy\?sender=.* url reject
 
-# > pushplus通知详情页去广告
+### > pushplus通知
+# 详情页去广告
 http://image.pushplus.plus/.*.jpg url 302 https://raw.githubusercontent.com/githubacct001/QuantumultX/master/Rewrite/Adfuckoff.png
 
-# > 网易大神
-//---开屏广告
+### > 网易大神
+# 去开屏广告
 ^https:\/\/god\.gameyw\.netease\.com\/v1\/ad\/.* url reject
 
-# > 淘宝
-//---开屏广告
+### > 淘宝
+# 开屏广告
 ^https:\/\/heic\.alicdn\.com\/imgextra.*\.heic url reject
 
-# > 百度网盘
-//---个人页面去广告
+### > 百度网盘
+# 个人页面去广告
 ^https:\/\/pan\.baidu\.com\/act\/v2\/welfare\/list.* url reject
 
-# > 动漫花园
+### > 动漫花园
 ^https:\/\/dmhy\.anoneko\.com\/.* url response-body <div id="1280_adv" align="center">|<a href="https://7segu.taobao.com.* response-body <none>
 ^https:\/\/.*\.bebi\.com\/.* url reject
 
-# > Pornhub
+### > Pornhub
 ^https:\/\/(www|cn)\.pornhub.com url response-body <div class="topAdContainter">(\n.*){9}|<div class="premiumAdvertWrapper">(\n.*){5}|<div class="adContainer clearfix middleVideoAdContainer">(\n.*){7}|<div class="adContainer clearfix ad-tabSplit">(\n.*){7}|<div class="adContainer clearfix">(\n.*){7} response-body <meta name="author" content="zyd">
-//---视频开头广告
+# 视频开头广告
 ^https:\/\/(www|cn)\.pornhub\.com\/_xa\/ads.* url reject
 
-# > 七猫小说
-//---VIP
+### > 七猫小说
+# VIP
 ^https:\/\/xiaoshuo\.wtzw\.com\/api\/v(1|2|3)\/user url script-response-body https://raw.githubusercontent.com/githubacct001/QuantumultX/secret/Rewrite/Qimao/qimao.js
-//---底部横幅广告
+# 底部横幅广告
 ^https:\/\/api-ks\.wtzw\.com\/api\/v(1|2)\/(float-adv|init-adv|reader-adv|bookshelf-adv|coopen-adv) url reject
 
-# > weibo
+### > weibo
 ^https?://(sdk|wb)app\.uve\.weibo\.com(/interface/sdk/sdkad.php|/wbapplua/wbpullad.lua) url script-response-body https://raw.githubusercontent.com/yichahucha/surge/master/wb_launch.js
 ^https?://m?api\.weibo\.c(n|om)/2/(statuses/(unread|extend|positives/get|(friends|video)(/|_)(mix)?timeline)|stories/(video_stream|home_list)|(groups|fangle)/timeline|profile/statuses|comments/build_comments|photo/recommend_list|service/picfeed|searchall|cardlist|page|!/photos/pic_recommend_status|video/tiny_stream_video_list|photo/info) url script-response-body https://raw.githubusercontent.com/yichahucha/surge/master/wb_ad.js
-# > 微博国际版
+### > 微博国际版
 ^https:\/\/weibointl\.api\.weibo\.cn\/portal\.php.*ads&c=ad.* url reject
 
-# > bilibili视频下载解析 bilibili.iiiab.com
+### > bilibili视频下载解析 bilibili.iiiab.com
 ^https:\/\/.*.iiilab.com\/.* url response-body 50px response-body 0px
 
-# > SmallSEOTools smallseotools.com
+### > SmallSEOTools smallseotools.com
 ^https:\/\/smallseotools\.com\/.* url response-body <div class="col-md-12 mob_pading">(\n.*){3}|<div class="col-md-12 mob_pading row">(\n.*){3} response-body <meta name="author" content="zyd">
 
-# > 樱花动漫 m.yhdm.io
+### > 樱花动漫 m.yhdm.io
 http://m.yhdm.io/bar/yfgg.js url reject
 http://m.yhdm.io/bar/yfyh.js url reject
 
-# > Jable.tv
+### > Jable.tv
 ^https:\/\/jable\.tv\/.* url response-body <section class="pb-3 pb-e-lg-40 text-center">.*</iframe>(</section>?)|<section class="pb-3 pb-e-lg-40 text-center">.*</a>(</section>?)|<div class="col-6 col-sm-4 col-lg-3">(\n.*){2}\n<a target="_blank".*(\n.*){11}|<div class="text-center mb-e-30">.*target='_blank'.*</a></iframe>(</div>?)|<div class="col-6 col-sm-4 col-lg-12">(\n.*){2}\n<a target="_blank".*(\n.*){11} response-body <meta name="author" content="zyd">
 ^https:\/\/asewlfjqwlflkew\.com\/gtm\.js.* url 302 $1$3
 
-# > 嘀哩哩 www.dililitv.com
+### > 嘀哩哩 www.dililitv.com
 ^https:\/\/www\.dililitv\.com\/wp-author\/tga\/.*ad=.* url reject
 ^https:\/\/js\.dilidd\.com\/top\.php url reject
 
-# > nfmovies www.nfmovies.com
+### > nfmovies www.nfmovies.com
 https:?/\/www.nfmovies.com\b.* url response-body <div class="myui-ra-container container">(\n.*){11}|76px|60px|chanceAd = 1;|timerAdCountdownCount > 5 response-body 000px
 
-# > 微信
+### > 微信
 ^https:\/\/mp\.weixin\.qq\.com\/mp\/ad.* url reject
 
-# > 去微信公众号广告 (By NobyDa)
+### > 去微信公众号广告 (By NobyDa)
 ^https?:\/\/mp\.weixin\.qq\.com\/mp\/getappmsgad url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/QuantumultX/File/Wechat.js
 
 # > 有道翻译
