--- a/Rewrite/Rewrite.conf
+++ b/Rewrite/Rewrite.conf
@@ -20,7 +20,7 @@ hostname = mp.weixin.qq.com, *.weibo.cn, m.youdao.com, *.bilibili.com, *.nfmovie
 # 删除粉笔公考课程
 #^https://ke\.fenbi\.com/iphone/.*/v3/content url reject-200
 
-# > 得物
+### > 得物
 # 去用户信息页广告
 ^https://app\.dewu\.com/api/v1/app/index/ice/user-info url script-response-body https://raw.githubusercontent.com/githubacct001/QuantumultX/secret/Rewrite/dewu/dw_user.js
 # 去探索页面广告
@@ -93,5 +93,5 @@ https:?/\/www.nfmovies.com\b.* url response-body <div class="myui-ra-container c
 ### > 去微信公众号广告 (By NobyDa)
 ^https?:\/\/mp\.weixin\.qq\.com\/mp\/getappmsgad url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/QuantumultX/File/Wechat.js
 
-# > 有道翻译
+### > 有道翻译
 ^http:\/\/m\.youdao\.com\/.* url response-body <div class="content-wrp">(\n.*){2} response-body <none>
