--- a/Rewrite/Rewrite.conf
+++ b/Rewrite/Rewrite.conf
@@ -2,6 +2,14 @@ hostname = mp.weixin.qq.com, *.weibo.cn, m.youdao.com, *.bilibili.com, *.nfmovie
 
 
 
+### > 知乎
+# 去相关推荐
+^https?:\/\/www\.zhihu\.com\/api\/v4\/answers\/2499001437\/related-readings url script-response-body zh_related.js
+# 去banner广告
+^https?:\/\/www\.zhihu\.com\/commercial_api\/banners_v3\/mobile_banner url reject
+# 去热门推荐广告
+^https?:\/\/www\.zhihu\.com\/api\/v4\/hot_recommendation\?show_ad=true url 302 https://www.zhihu.com/api/v4/hot_recommendation?show_ad=false
+
 ### > 浙里办
 # 去开屏广告
 ^https?:\/\/portal\.zjzwfw\.gov\.cn\/app_api\/appHome\/selectStartPic url reject
