--- a/Rewrite/Rewrite.conf
+++ b/Rewrite/Rewrite.conf
@@ -4,7 +4,7 @@ hostname = mp.weixin.qq.com, *.weibo.cn, m.youdao.com, *.bilibili.com, *.nfmovie
 
 ### > 知乎
 # 去相关推荐
-^https?:\/\/www\.zhihu\.com\/api\/v4\/answers\/2499001437\/related-readings url script-response-body zh_related.js
+^https?:\/\/www\.zhihu\.com\/api\/v4\/answers\/2499001437\/related-readings url script-response-body https://raw.githubusercontent.com/githubacct001/QuantumultX/secret/Rewrite/Zhihu/zh_related.js
 # 去banner广告
 ^https?:\/\/www\.zhihu\.com\/commercial_api\/banners_v3\/mobile_banner url reject
 # 去热门推荐广告
