--- a/Rewrite/Rewrite.conf
+++ b/Rewrite/Rewrite.conf
@@ -1,4 +1,4 @@
-hostname = mp.weixin.qq.com, *.weibo.cn, m.youdao.com, *.bilibili.com, *.nfmovies.com, www.dililitv.com, js.dilidd.com, jable.tv, asewlfjqwlflkew.com, m.yhdm.io, smallseotools.com, *.iiilab.com, api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, *.wtzw.com, *.pornhub.com, dmhy.anoneko.com, *.bebi.com, pan.baidu.com, heic.alicdn.com, god.gameyw.netease.com, image.pushplus.plus, slb.orderorigin.com, app.dewu.com, *.fenbi.com, az1mbasecc.bas.cmbchina.com, s3gw.cmbimg.com, portal.zjzwfw.gov.cn
+hostname = mp.weixin.qq.com, *.weibo.cn, m.youdao.com, *.bilibili.com, *.nfmovies.com, www.dililitv.com, js.dilidd.com, jable.tv, asewlfjqwlflkew.com, m.yhdm.io, smallseotools.com, *.iiilab.com, api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, *.wtzw.com, *.pornhub.com, dmhy.anoneko.com, *.bebi.com, pan.baidu.com, heic.alicdn.com, god.gameyw.netease.com, image.pushplus.plus, slb.orderorigin.com, app.dewu.com, *.fenbi.com, az1mbasecc.bas.cmbchina.com, s3gw.cmbimg.com, portal.zjzwfw.gov.cn, www.zhihu.com
 
 
 
