--- a/Rewrite/Rewrite.conf
+++ b/Rewrite/Rewrite.conf
@@ -9,6 +9,8 @@ hostname = mp.weixin.qq.com, *.weibo.cn, m.youdao.com, *.bilibili.com, *.nfmovie
 ^https?:\/\/www\.zhihu\.com\/commercial_api\/banners_v3\/mobile_banner url reject
 # 去热门推荐广告
 ^https?:\/\/www\.zhihu\.com\/api\/v4\/hot_recommendation\?show_ad=true url 302 https://www.zhihu.com/api/v4/hot_recommendation?show_ad=false
+# 去app文章底部广告
+^https?:\/\/www\.zhihu\.com\/api\/v4\/answers\/\d+\/recommendations\?omni=mix\&load_new_ad=2 url reject
 
 ### > 浙里办
 # 去开屏广告
