--- a/Rewrite/X-Search.conf
+++ b/Rewrite/X-Search.conf
@@ -1,4 +1,11 @@
 #>>>>>>>>>>>Safari搜索强化
+
+
+//[mitm]
+hostname = www.google.cn, www.google.com
+
+
+//[rewrite local]
 # > 知乎搜索
 ^https?://www.google.c(n|om)\/search\?q=zh\+ url 302 https://www.zhihu.com/search?q=
 # > Twitter搜索
