--- a/Rewrite/X-Search.conf
+++ b/Rewrite/X-Search.conf
@@ -2,7 +2,7 @@
 
 
 //[mitm]
-hostname = www.google.cn, www.google.com
+hostname = *.google.cn, *.google.com
 
 
 //[rewrite local]
@@ -13,8 +13,8 @@ hostname = www.google.cn, www.google.com
 # > 百度搜索
 ^https?://www.google.c(n|om)\/search\?q=bd\+ url 302 https://www.baidu.com/s?wd=
 # > 微博搜索
-^https?://www.google.c(n|om)\/search\?q=wb\+ url 302 weibointernational://search?q=
+^https?://www.google.c(n|om)\/search\?q=wb\+ url 302 https://m.weibo.cn/search?containerid=100103type=1&q=
 # > Bilibili搜索
-^https?://www.google.c(n|om)\/search\?q=bili\+ url 302 bilibili://search?keyword=
+^https?://www.google.c(n|om)\/search\?q=bili\+ url 302 https://search.bilibili.com/all?keyword=
 # > YouTube搜索
 ^https?://www.google.c(n|om)\/search\?q=ytb\+ url 302 https://www.youtube.com/results?search_query=
