--- a/Rewrite/X-Search.conf
+++ b/Rewrite/X-Search.conf
@@ -2,19 +2,25 @@
 
 
 //[mitm]
-hostname = www.google.com, www.google.cn
+hostname = www.google.cn
 
 
 //[rewrite local]
 # > 知乎搜索
 ^https?://www.google.c(n|om)\/search\?q=zh\+ url 302 https://www.zhihu.com/search?q=
+# > 知乎搜索 移动端
+^https?://www.google.c(n|om)\/search\?q=zhm\+ url 302 https://www.zhihu.com/search?q=
 # > Twitter搜索
 ^https?://www.google.c(n|om)\/search\?q=twi\+ url 302 Twitter://search?query=
 # > 百度搜索
 ^https?://www.google.c(n|om)\/search\?q=bd\+ url 302 https://www.baidu.com/s?wd=
 # > 微博搜索
 ^https?://www.google.c(n|om)\/search\?q=wb\+ url 302 https://m.weibo.cn/search?containerid=100103type=1&q=
+# > 微博搜索 移动端
+^https?://www.google.c(n|om)\/search\?q=wbm\+ url 302 weibointernational://search?q=
 # > Bilibili搜索
-^https?://www.google.c(n|om)\/search\?q=bili\+ url 302 https://search.bilibili.com/all?keyword=
+^https?://www.google.c(n|om)\/search\?q=bili\+ url 302 bilibili://search?keyword=
+# > Bilibili搜索 移动端
+^https?://www.google.c(n|om)\/search\?q=bilim\+ url 302 https://search.bilibili.com/all?keyword=
 # > YouTube搜索
 ^https?://www.google.c(n|om)\/search\?q=ytb\+ url 302 https://www.youtube.com/results?search_query=
